--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "phpspec/phpspec": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*",
-        "benconstable/phpspec-laravel": "^3.0"
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
